--- a/style.css
+++ b/style.css
@@ -38,13 +38,20 @@ form input, select, button {
     border-radius: 5px;
 }
 
+#selecao, form input[type='number'], button {
+    border: 2px solid #355873;
+}
+
+#selecao {
+    background-color: #fff;
+}
+
 form input::placeholder {
     text-align: center;
 }
 
 button {
     background-color: #1ad35e;
-    /* border: none; */
     min-width: 300px;
 }
 
@@ -53,6 +60,7 @@ button {
     
 }
 
-@media screen and (max-width: 400px) {
-    
+div a {
+    text-decoration: none;
+    color: #467CD9;
 }
